[package]
name = "fisa"
description = "FISA (Ferris Instrument Software Archetecture) is an IVI-VISA library for Rust."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Ross Smyth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"

[lib]
crate-type = ["lib"]